--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,17 +8,25 @@ jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 4
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', 'pypy3']
+        python-version: 
+        - '3.8'
+        - '3.9'
+        - '3.10'
+        - '3.11'
+        - '3.12'
+        - 'pypy-3.9'
+        - 'pypy-3.10'
     name: Python ${{ matrix.python-version }} Test 🧪
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Dump GitHub context
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
     - name: Set up Python ${{ matrix.python-version }} 🐍
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies 🏗
@@ -31,23 +39,25 @@ jobs:
     - name: Run Unit and Intergration Tests 🧪
       run: |
         pip install pytest
-        python -m pytest -v
+        python -m pytest -vv
     - name: Run Install and Smoke Test ⚗️
       run: |
         pip install .
-        switrs_to_sqlite --help
+        archiver --help
   release:
     runs-on: ubuntu-latest
     needs: test
     name: Build Package 📦
+    permissions:
+      id-token: write # IMPORTANT: this permission is mandatory for trusted publishing
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Dump GitHub context
       env:
         GITHUB_CONTEXT: ${{ toJson(github) }}
       run: echo "$GITHUB_CONTEXT"
     - name: Set up Python 🐍
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.x'
     - name: Install dependencies 🏗
@@ -75,6 +85,4 @@ jobs:
         .
     - name: Publish distribution 📦 to PyPI
       if: startsWith(github.ref, 'refs/tags')
-      uses: pypa/gh-action-pypi-publish@master
-      with:
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      uses: pypa/gh-action-pypi-publish@release/v1
